--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -95,12 +95,12 @@
 
 @article{lee_maximum_2018,
 	title = {Maximum {Pairwise} {Bayes} {Factors} for {Covariance} {Structure} {Testing}},
-	journal = {arXiv:1809.03105 [stat]},
+	journal = {arXiv preprint},
+	url = {https://arxiv.org/abs/1809.03105},
 	author = {Lee, Kyoungjae and Lin, Lizhen and Dunson, David},
 	month = sep,
 	year = {2018},
-	keywords = {Statistics - Methodology},
-	file = {[Lee.2018] Maximum Pairwise Bayes Factors for Covariance Structure Testing.pdf:/home/kisung/Dropbox/VP. Packages/CovTools/[Lee.2018] Maximum Pairwise Bayes Factors for Covariance Structure Testing.pdf:application/pdf}
+	keywords = {Statistics - Methodology}
 }
 
 @article{bickel_regularized_2008,
